# ma_rasterizer

./: .gitignore  CMakeLists.txt  MaRasterizer.cpp  MaRasterizer.hpp  Makefile  README.md  main.cpp  todo.txt
include/: Camera.hpp  Clipping.hpp  CoordsTransform.hpp  Debug.hpp  Geometry.hpp  Homogeneous.hpp  Interpolation.hpp  LinearAlgebra.hpp  MaRasterizer.hpp  Model.hpp  Updater.hpp
pictures/: meow.txt
src/: Camera.cpp  Clipping.cpp  CoordsConversion.cpp  CoordsTransform.cpp  Debug.cpp  DrawingAlgos.cpp  Geometry.cpp  Interpolation.cpp  LinearAlgebra.cpp  MaRasterizer.cpp  Model.cpp  ProjectOnViewPort.cpp  SceneManage.cpp  Updater.cpp  main.cpp
